# epoch_explorers

./: .env  .env .example  README_LANGGRAPH_COMPILATION.md  pyproject.toml  requirements.txt
design_docs/: AGENT_MEMORY_SYSTEM.md  AUTONOMOUS_DATA_EXPLORATION_ARCHITECTURE.md  AUTONOMOUS_DATA_INTEGRATION_GUIDE.md  CHAT_ENHANCED_RAG_COMPLETE.md  CHAT_ENHANCED_RAG_INTEGRATION.md  CHAT_QUICK_REFERENCE.md  CHAT_SYSTEM_COMPLETE.md  DOC_ID_COMPLETE_EXPLANATION.md  DOC_ID_QUICK_REFERENCE.md  DOC_ID_STRATEGY.md  DOC_ID_VISUAL_WALKTHROUGH.md  HOW_TO_COMPILE_LANGGRAPH.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INDEX_LANGGRAPH_COMPILATION.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_VERIFICATION_CHECKLIST.md  LANGGRAPH_CLUSTERER_QUICK_START.md  LANGGRAPH_COMPILATION_GUIDE.md  LANGGRAPH_COMPILATION_VISUAL.md  LANGGRAPH_INTEGRATION_QUICK_REF.md  LANGGRAPH_INTEGRATION_README.md  LANGGRAPH_INTEGRATION_SUMMARY.md  LANGGRAPH_ORCHESTRATOR_IMPLEMENTATION.md  LANGGRAPH_PIPELINE_FLOW.md  LANGGRAPH_QUICK_REFERENCE.md  LANGGRAPH_USAGE_EXAMPLES.md  RAG_AGENTIC_WORKFLOW_COMPLETE.md  README.md  README_ENHANCED_RAG.md  RL_HEALING_AGENT_INTEGRATION.md
scripts/: demo_langgraph_compilation.py  queue_listener.py  setup_db.py  test_langgraph_compilation.py
src/: api.py  app.py  scripts.py
src/clusterer/: __init__.py  data_sources.py  example_usage.py  langgraph_orchestrator.py  pipeline_agents.py  state_manager.py
src/database/: __init__.py
src/pages/: __init__.py  chat_rag_admin.py  chat_user.py  chunk_embedding_report.py  rag_matrics_report.py  rag_metadata_report.py  settings.py
(+44 files in other folders)
